# Brahma-Functions

./: .pre-commit-config.yaml  .py  Brahma_Functions.py  Home.py  LICENSE  MakeFile  app.py  cli.py  pyproject.toml  readme.md  temp.py  test_ai_fn2.py
.streamlit/: secrets.toml
brahma_functions/: __init__.py  ai_function.py  app.py  config_factory.py  constants.py  custom_generator.py  factory.py  formatters.py  functions.py  generators.py  models.py  settings.py  streamlit_utils.py  test_ai_func.py  utils.py
brahma_functions/generated_code/: Car.py  Vehicle.py  add_nums.py  merge_two_linkedlists.py  merge_two_linkedlists_v1.py  merge_two_linkedlists_v2.py
generated_code/: Car.py  Vehicle.py  add_nums.py  find_duplicates.py  merge_two_array.py  merge_two_linkedlists_v1.py  merge_two_linkedlists_v2.py  product_of_two_array.py
pages/: 1_🚀_CodeExpress.py  1_🧬_Code_Generator.py  2_📣_Code__Translator.py  2_🧬_CodeBridge.py  3_⚡️_Code_Optimizer.py  3_🚚_CodeShift.py  4_📽️_Project_Generator.py  5_Product_Updates.py  5_pgen.py  Code_Generator.py
templates/: base.template  custom.jinja
tests/: __init__.py  test_ai_fn.py  test_ai_func.py  test_brahma_functions.py
