[tool.poetry]
name = "brahma-functions"
version = "0.1.0"
description = ""
authors = ["Subham Singh <subham.singh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.4"
streamlit = "^1.22.0"
black = "^23.3.0"
protobuf = "3.20.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
